// yz&zw second draft
syntax = "proto2";
// notify amazon to connect to this world id, 
// must be the first ups notification sent to amazon
message UAConnectWorld{
    required int64 worldId = 1;
    required int64 seqnum = 2;
}

// notify amazon that a truck has arrived to pick up the specified order
message UAArrived{
    required int64 truckId = 1;
    required int64 orderId = 2;
    required int64 seqnum = 3; 
}

// warehouse id and its location
message Warehouse{
    required int32 warehouseId = 1;
    required int32 addressX = 2;
    required int32 addressY = 3;
}

// notify ups to send a truck to the specified warehouse to pick 
// the specified order
message AUPickup{
    required Warehouse warehouse = 1;
    required int64 orderId = 2;
    required int64 seqnum = 3;
}

// detailed order info:
// include the destination location to send the order
// and whether the order is loading or loaded
message Order {
    required int64 orderId = 1;
    required int32 destX = 2;
    required int32 destY = 3;
    required string status = 4;  // "loading", "loaded"
}

// all load info for the specified truck
message AULoad {
    repeated Order orders = 1;
    required int32 truckId = 2;
    required int64 seqnum = 3;
}

// certain package belongs to certain order
// different packages can be of the same order
// e.g. in one order, a user buys an apple and a banana
// The apples are supplied by warehouse 1, while the bananas are supplied by warehouse 2
// So they are of the same order, but of different packages delivered by different trucks
message Package {
    required int64 packageId = 1;
    required int64 orderId = 2;
    required string status = 3;  // "delivering", "delivered"
}

// all deliver info related to the specified truck
message UADeliver {
    repeated Package packages = 1;
    required int32 truckid = 2;
    required int64 seqnum = 3;
}

// error message
message Err{
    required string err = 1;
    required int64 originseqnum = 2;
    required int64 seqnum = 3;
}

// ups -> amazon
message UACommands {
    repeated UAArrived truckarriveds = 2;
    repeated UADeliver deliveries = 3;
    repeated Err uaerrors = 4;
    repeated int64 acks = 5;
}

// amazon -> ups
message AUCommands {
    repeated AUPickup pickups = 1;
    repeated AULoad loads = 2;
    repeated Err auerrors = 3;
    repeated int64 acks = 4;
}

